src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>QPMS__Case_Type__c</fullName>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Create_Non_Conformance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Non-Conformance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Defect_Statement__c</fullName>
        <label>Defect Statement</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>QPMS__Business_Entity__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__NC_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NC Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Non_Conformance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Non-Conformance</label>
        <referenceTo>QPMS__Non_Conformance__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Occurrence_Date__c</fullName>
        <label>Occurrence Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Process_Defect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Defect</label>
        <referenceTo>QPMS__Defect__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process</label>
        <referenceTo>QPMS__Process__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Product_Defect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Defect</label>
        <referenceTo>QPMS__Defect__c</referenceTo>
        <relationshipLabel>Cases (Product Defect)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>QPMS__Product__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__RecordTypeName__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Reported_Date__c</fullName>
        <label>Reported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Reporter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>QPMS__Defect_Statement</fullName>
        <active>true</active>
        <description>Defect Statement Should not be left blank</description>
        <errorConditionFormula>LEN( QPMS__Defect_Statement__c ) &lt;= 0</errorConditionFormula>
        <errorDisplayField>QPMS__Defect_Statement__c</errorDisplayField>
        <errorMessage>Defect Statement Should not be left empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QPMS__Occurance_Date_not_future</fullName>
        <active>true</active>
        <errorConditionFormula>QPMS__Occurrence_Date__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>QPMS__Occurrence_Date__c</errorDisplayField>
        <errorMessage>Occurrence Date cannot be a future date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QPMS__Occurrence_Date</fullName>
        <active>true</active>
        <description>Occurrence Date cannot be greater than the Reported Date</description>
        <errorConditionFormula>QPMS__Occurrence_Date__c &gt; QPMS__Reported_Date__c</errorConditionFormula>
        <errorDisplayField>QPMS__Occurrence_Date__c</errorDisplayField>
        <errorMessage>Occurrence Date cannot be greater than the Reported Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QPMS__Process_CaseType</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( QPMS__Case_Type__c , &apos;Process&apos;), ISBLANK( QPMS__Process__c ) )</errorConditionFormula>
        <errorDisplayField>QPMS__Process__c</errorDisplayField>
        <errorMessage>Process should not be left blank when Case Type is Process</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QPMS__Process_Defect</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( ISBLANK( QPMS__Process__c ) ), ISBLANK( QPMS__Process_Defect__c ))</errorConditionFormula>
        <errorMessage>Process Defect should not be left blank when Process is not blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QPMS__ProductDefectOrProcessDefect</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( ISBLANK( QPMS__Process_Defect__c ) ),NOT( ISBLANK( QPMS__Product_Defect__c ) ))</errorConditionFormula>
        <errorMessage>Have to select only one at a time either &quot;Product Defect&quot; or &quot;Process Defect&quot; based on &quot;Product&quot; or &quot;Process&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QPMS__ProductOrProcess</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( ISBLANK( QPMS__Process__c ) ),NOT( ISBLANK( QPMS__Product_Family__c ) ))</errorConditionFormula>
        <errorMessage>Have to select only one at a time either &quot;Product&quot; or &quot;Process&quot; based on &quot;Case Type&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QPMS__Product_CaseType</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( QPMS__Case_Type__c , &apos;Product&apos;), ISBLANK( QPMS__Product_Family__c ) )</errorConditionFormula>
        <errorDisplayField>QPMS__Product_Family__c</errorDisplayField>
        <errorMessage>Product should not be left blank when Case Type is Product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QPMS__Product_Defect</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( ISBLANK( QPMS__Product_Family__c ) ), ISBLANK( QPMS__Product_Defect__c ))</errorConditionFormula>
        <errorDisplayField>QPMS__Product_Defect__c</errorDisplayField>
        <errorMessage>Product Defect should not be left blank when Product is not blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QPMS__Reported_Date</fullName>
        <active>true</active>
        <description>Reported Date should not be a future date</description>
        <errorConditionFormula>QPMS__Reported_Date__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>QPMS__Reported_Date__c</errorDisplayField>
        <errorMessage>Reported Date should not be a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QPMS__Reported_Date_cannot_be_before_Occurance</fullName>
        <active>true</active>
        <errorConditionFormula>QPMS__Reported_Date__c &lt; QPMS__Occurrence_Date__c</errorConditionFormula>
        <errorDisplayField>QPMS__Reported_Date__c</errorDisplayField>
        <errorMessage>Reported Date cannot be less than Occurrence Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QPMS__Reporter</fullName>
        <active>true</active>
        <description>Reporter Should not be left blank</description>
        <errorConditionFormula>ISBLANK( QPMS__Reporter__c )</errorConditionFormula>
        <errorDisplayField>QPMS__Reporter__c</errorDisplayField>
        <errorMessage>Reporter Should not be left blank</errorMessage>
    </validationRules>
</CustomObject>